[gd_scene load_steps=5 format=3 uid="uid://cgq1sfas21djs"]

[ext_resource type="Texture2D" uid="uid://b64fs4i6xedgl" path="res://resources/ui/popup_bg.png" id="1_ho7y6"]
[ext_resource type="Theme" uid="uid://dymyqo6i3f2r3" path="res://resources/ui/small_theme.tres" id="1_rv7nq"]
[ext_resource type="Script" path="res://docs_and_help/popup.gd" id="1_v4881"]
[ext_resource type="StyleBox" uid="uid://bkalyigsp33ii" path="res://resources/ui/simple_border.tres" id="3_n3cin"]

[node name="Popup" type="PanelContainer" node_paths=PackedStringArray("title_label", "code_label", "is_spell_label", "iota_count_label", "middle_container", "graphic_parent", "desc_button", "description_label", "background")]
custom_minimum_size = Vector2(256, 0)
offset_right = 256.0
theme = ExtResource("1_rv7nq")
script = ExtResource("1_v4881")
title_label = NodePath("MarginContainer/Main/Header/HeaderSplit/Title")
code_label = NodePath("MarginContainer/Main/Middle/Info/Code")
is_spell_label = NodePath("MarginContainer/Main/Middle/Info/IsSpell")
iota_count_label = NodePath("MarginContainer/Main/Middle/Info/IotaCount")
middle_container = NodePath("MarginContainer/Main/Middle")
graphic_parent = NodePath("MarginContainer/Main/Middle/CenterContainer/GraphicParent")
desc_button = NodePath("MarginContainer/Main/Middle/Info/NextDesc")
description_label = NodePath("MarginContainer/Main/DescMargin/Desc")
background = NodePath("NinePatchRect")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
texture = ExtResource("1_ho7y6")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 28
patch_margin_top = 28
patch_margin_right = 28
patch_margin_bottom = 28

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 15

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Header" type="MarginContainer" parent="MarginContainer/Main"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 12

[node name="HeaderSplit" type="HBoxContainer" parent="MarginContainer/Main/Header"]
layout_mode = 2

[node name="Drag" type="Button" parent="MarginContainer/Main/Header/HeaderSplit"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 13
text = "III"

[node name="Title" type="Label" parent="MarginContainer/Main/Header/HeaderSplit"]
custom_minimum_size = Vector2(192, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 22
text = "Some Pattern"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Button" parent="MarginContainer/Main/Header/HeaderSplit"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="Middle" type="HBoxContainer" parent="MarginContainer/Main"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Main/Middle"]
clip_contents = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="GraphicParent" type="Control" parent="MarginContainer/Main/Middle/CenterContainer"]
layout_mode = 2

[node name="Info" type="VBoxContainer" parent="MarginContainer/Main/Middle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Code" type="Label" parent="MarginContainer/Main/Middle/Info"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_n3cin")
text = "1LlsrR"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="IsSpell" type="Label" parent="MarginContainer/Main/Middle/Info"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_n3cin")
text = "Spell"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IotaCount" type="Label" parent="MarginContainer/Main/Middle/Info"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_n3cin")
text = "Params: 2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextDesc" type="Button" parent="MarginContainer/Main/Middle/Info"]
layout_mode = 2
text = "Desc ->"

[node name="DescMargin" type="MarginContainer" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Desc" type="RichTextLabel" parent="MarginContainer/Main/DescMargin"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]Some long and lengthy description here, which can force the popup to expand vertically. This along with the \"Middle\" section can be hidden based on displayed contents."
fit_content = true
scroll_active = false

[connection signal="button_down" from="MarginContainer/Main/Header/HeaderSplit/Drag" to="." method="_on_drag_button_down"]
[connection signal="button_up" from="MarginContainer/Main/Header/HeaderSplit/Drag" to="." method="_on_drag_button_up"]
[connection signal="pressed" from="MarginContainer/Main/Header/HeaderSplit/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Middle/Info/NextDesc" to="." method="_on_next_desc_pressed"]
